<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/bookName"
        android:text=""
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/bookEditora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publisher"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/bookLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/bookDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/widgetNoBook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/widgetnobook"
        android:visibility="visible"
        android:gravity="center" />

</LinearLayout>