<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    android:orientation="vertical"
    tools:context=".Controller.MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/pesquisar"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchBookBar"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:elevation="8dp"
            android:hint="@string/hint_message"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_SearchBook"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/search"
            android:padding="10dp"
            android:src="@drawable/search" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_returned_books"
        android:layout_width="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"/>

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/not_found"
        android:textColor="@color/black"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="invisible" />


    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:ignore="BottomAppBar">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavBar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:menu="@menu/activity_main_drawer" />
    </com.google.android.material.bottomappbar.BottomAppBar>

</RelativeLayout>